--- a/Llama3_2_(11B)_Vision.ipynb
+++ b/Llama3_2_(11B)_Vision.ipynb
@@ -216,7 +216,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/home/ikonstas/unsloth-project/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "/home/ik36/unsloth-projects/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
             "  from .autonotebook import tqdm as notebook_tqdm\n"
           ]
         },
@@ -226,10 +226,10 @@
           "text": [
             "🦥 Unsloth: Will patch your computer to enable 2x faster free finetuning.\n",
             "🦥 Unsloth Zoo will now patch everything to make training faster!\n",
-            "==((====))==  Unsloth 2025.5.7: Fast Mllama patching. Transformers: 4.51.3.\n",
-            "   \\\\   /|    NVIDIA GeForce RTX 2080 Ti. Num GPUs = 3. Max memory: 10.569 GB. Platform: Linux.\n",
-            "O^O/ \\_/ \\    Torch: 2.7.0+cu126. CUDA: 7.5. CUDA Toolkit: 12.6. Triton: 3.3.0\n",
-            "\\        /    Bfloat16 = FALSE. FA [Xformers = 0.0.30. FA2 = False]\n",
+            "==((====))==  Unsloth 2025.5.7: Fast Qwen2_5_Vl patching. Transformers: 4.51.3.\n",
+            "   \\\\   /|    NVIDIA GeForce RTX 3090. Num GPUs = 3. Max memory: 23.56 GB. Platform: Linux.\n",
+            "O^O/ \\_/ \\    Torch: 2.7.0+cu126. CUDA: 8.6. CUDA Toolkit: 12.6. Triton: 3.3.0\n",
+            "\\        /    Bfloat16 = TRUE. FA [Xformers = 0.0.30. FA2 = False]\n",
             " \"-____-\"     Free license: http://github.com/unslothai/unsloth\n",
             "Unsloth: Fast downloading is enabled - ignore downloading bars which are red colored!\n"
           ]
@@ -238,7 +238,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Loading checkpoint shards: 100%|██████████| 2/2 [00:02<00:00,  1.49s/it]\n"
+            "Using a slow image processor as `use_fast` is unset and a slow processor was saved with this model. `use_fast=True` will be the default behavior in v4.52, even if the model was saved with a slow processor. This will result in minor differences in outputs. You'll still be able to use a slow processor with `use_fast=False`.\n"
           ]
         }
       ],
@@ -273,7 +273,7 @@
         "model, tokenizer = FastVisionModel.from_pretrained(\n",
         "    # \"unsloth/Llama-3.2-11B-Vision-Instruct\",\n",
         "    # \"unsloth/llava-1.5-7b-hf-bnb-4bit\",\n",
-        "    \"unsloth/Llama-3.2-11B-Vision-Instruct-unsloth-bnb-4bit\",\n",
+        "    \"unsloth/Qwen2.5-VL-7B-Instruct\",\n",
         "    load_in_4bit = True, # Use 4bit to reduce memory use. False for 16bit LoRA.\n",
         "    use_gradient_checkpointing = \"unsloth\", # True or \"unsloth\" for long context\n",
         ")\n"
@@ -301,7 +301,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Unsloth: Making `model.base_model.model.language_model` require gradients\n"
+            "Unsloth: Making `model.base_model.model.model` require gradients\n"
           ]
         }
       ],
@@ -481,7 +481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -497,7 +497,7 @@
               "'The film of upper gastrointestinal radiography.The film of upper gastrointestinal radiography with diatrizoate meglumine as the contrast medium on postoperative day 7 for one patient underwent the modified delta-shaped gastroduodenostomy. The inner diameter of the anastomosis was measured the length of the white arrow as shown in the figure.'"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -530,7 +530,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "metadata": {
         "id": "oPXzJZzHEgXe"
       },
@@ -565,7 +565,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 8,
       "metadata": {
         "id": "gFW2qXIr7Ezy"
       },
@@ -585,7 +585,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -607,7 +607,7 @@
               "     'text': 'The film of upper gastrointestinal radiography.The film of upper gastrointestinal radiography with diatrizoate meglumine as the contrast medium on postoperative day 7 for one patient underwent the modified delta-shaped gastroduodenostomy. The inner diameter of the anastomosis was measured the length of the white arrow as shown in the figure.'}]}]}"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -627,7 +627,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -640,22 +640,22 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "This radiograph appears to be a panoramic view of the upper and lower dentition, specifically an Orthopantomogram (OPG).\n",
+            "This is a dental panoramic radiograph (panorex). It shows the entire mouth from the top of the head down to the chin, including both mandibular (lower jaw) and maxillary (upper jaw) teeth.\n",
             "\n",
-            "* The panoramic radiograph demonstrates normal dental structures.\n",
-            "* There is an abnormal area on the upper right, represented by an area of radiolucency, corresponding to the antrum.\n",
+            "### Observations:\n",
             "\n",
-            "**Key Observations**\n",
-            "\n",
-            "* The image clearly shows the upper teeth, which are situated to the left of the image and include the upper canines.\n",
-            "* The radiopaque structures on the lower half of the image demonstrate a complete dentition, with all 4 quadrants of the mandible in place.\n",
-            "* The molars in each quadrant appear to be missing, with the tooth socket on the right upper quadrant empty.\n",
-            "* This could indicate several reasons why this may be, including: \n",
-            "  + It may not be possible to capture the full radiographic image of the teeth.\n",
-            "\n",
-            "**Conclusion**\n",
-            "\n",
-            "Based on the provided information, it is difficult to definitively conclude why the right maxillary third molars are not visible on the image.<|eot_id|>\n"
+            "1. **Teeth Structure:**\n",
+            "   - The radiograph reveals all 28 adult teeth.\n",
+            "   - The teeth appear well-aligned, except for the teeth marked by arrows.\n",
+            "   \n",
+            "2. **Teeth Markings:**\n",
+            "   - There are arrows pointing towards specific areas of concern in the image:\n",
+            "     - The left upper central incisor (marked by the lower-left arrow) appears to have some abnormalities around it, such as a faint dark area suggesting a possible root canal procedure or periapical pathology.\n",
+            "     - The right upper lateral incisor and canine (marked by the upper-left arrow) seem to be affected as well. There might be bone loss or root canal treatments affecting these areas.\n",
+            "     - There are areas indicating potential abnormalities with the lower first premolar (marked by the lower-right arrow), where there seems to be some opacity and reduction in bone density, which could suggest caries or periodontal disease.\n",
+            "   \n",
+            "3. **Bones and Supporting Structures:**\n",
+            "   - The radiograph highlights the\n"
           ]
         }
       ],
@@ -1105,7 +1105,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.10.17"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
