feat(main): remove accelerate support

--- a/Llama3_2_(11B)_Vision.ipynb
+++ b/Llama3_2_(11B)_Vision.ipynb
@@ -79,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -244,7 +244,6 @@
       ],
       "source": [
         "\n",
-        "from accelerate import Accelerator\n",
         "from unsloth import FastVisionModel # FastLanguageModel for LLMs\n",
         "import torch\n",
         "\n",
@@ -265,10 +264,6 @@
         "    \"unsloth/llava-v1.6-mistral-7b-hf-bnb-4bit\",      # Any Llava variant works!\n",
         "    \"unsloth/llava-1.5-7b-hf-bnb-4bit\",\n",
         "] # More models at https://huggingface.co/unsloth\n",
-        "\n",
-        "\n",
-        "# Initialize accelerator\n",
-        "accelerator = Accelerator()\n",
         "\n",
         "model, tokenizer = FastVisionModel.from_pretrained(\n",
         "    # \"unsloth/Llama-3.2-11B-Vision-Instruct\",\n",
@@ -700,7 +695,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -708,7 +703,15 @@
         "id": "95_Nn-89DhsL",
         "outputId": "27b03b47-2fab-4905-9408-e8fa30e8c7fd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Unsloth: Model does not have a default image size - using 512\n"
+          ]
+        }
+      ],
       "source": [
         "from unsloth import is_bf16_supported\n",
         "from unsloth.trainer import UnslothVisionDataCollator\n",
@@ -751,7 +754,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -765,8 +768,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "GPU = NVIDIA GeForce RTX 2080 Ti. Max memory = 10.569 GB.\n",
-            "7.604 GB of memory reserved.\n"
+            "GPU = NVIDIA GeForce RTX 3090. Max memory = 23.56 GB.\n",
+            "7.82 GB of memory reserved.\n"
           ]
         }
       ],
@@ -781,7 +784,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -821,13 +824,6 @@
         }
       ],
       "source": [
-        "\n",
-        "\n",
-        "# Use accelerator to prepare trainer components\n",
-        "trainer.model, trainer.optimizer, trainer.lr_scheduler = accelerator.prepare(\n",
-        "    trainer.model, trainer.optimizer, trainer.lr_scheduler\n",
-        ")\n",
-        "\n",
         "trainer_stats = trainer.train()"
       ]
     },
